	Beta 0.4.4 RC3
- Updated to RIFT 2.0
	
	Beta 0.4.4 RC1
- Tagged as Beta

	r9
- Bugfixed Datagrid and Popup controls	

	r8
- Started using LibScheduler
- DataGrid's SetData now accepts an 'immediate' parameter

	r7
- Fixed bug in DataGrid control

	r6
- Added Popup control	
- Slightly changed color schemas to get better contrast
- Switched coin textures to those used by RIFT
- Added access path to the inner panel of the DataGrid control
- Added option to change FontSize for Text Cells via function

	r5
- Added Popup Manager	

	r4
- Fixed bug in MoneySelector that made the keyboard unusable

	r3
- Added callback to SetData method of the DataGrid control (to be called when completed)

	Release 0.4.4
- First version