@@ -11,9 +11,9 @@ Description =
 	English = "GUI Library",
 }
 Author = "Baanano"
-Version = "0.4.4 RC3"
+Version = "0.4.4 RC4"
 Email = "baanano.rift@gmail.com"
-Environment = "2.0"
+Environment = "2.1"
 Dependencies =
 {
 	LibAsyncTextures = { "required", "before", },
